added an error dialog to register new device with mac missmatch

--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 - Cihaz katdetmede MAC çek etme işlemi
-  a - Kullanıcnın girdiği mac ile cihazın maci aynı mı
-  b - Cihazdan gelen mac bizdeki listede var mı
-  c - MAC adresi geçersizse hata mesajı döndürme
+  a - Kullanıcnın girdiği mac ile cihazın maci aynı mı 
+  b - Cihazdan gelen mac bizdeki listede var mı ----> OK
+  c - MAC adresi geçersizse hata mesajı döndürme ----> OK
 - Rota çizerken sadece dolu kutuları içermesi
 - Rota için başlangıç ve bitişi dahil etme
 - Daha çok örnek kutu ekleme
