general cleanup and improvoments

--- a/TODO
+++ b/TODO
@@ -3,7 +3,7 @@
   b - Cihazdan gelen mac bizdeki listede var mı ----> OK
   c - MAC adresi geçersizse hata mesajı döndürme ----> OK
 - Rota çizerken sadece dolu kutuları içermesi ----> OK - Threshold is set to > 10
-- Rota için başlangıç ve bitişi dahil etme
-- Daha çok örnek kutu ekleme
+- Rota için başlangıç ve bitişi dahil etme ---> Not necessary
+- Daha çok örnek kutu ekleme ---> WORKING ON IT
 - Farklı bir profil açıp oraya gerçek cihazı ekleme
 - Görsel düzenlemeler?
