device mac check when adding new device completed.

--- a/TODO
+++ b/TODO
@@ -5,5 +5,5 @@
 - Rota çizerken sadece dolu kutuları içermesi ----> OK - Threshold is set to > 10
 - Rota için başlangıç ve bitişi dahil etme ---> Not necessary
 - Daha çok örnek kutu ekleme ---> WORKING ON IT
-- Farklı bir profil açıp oraya gerçek cihazı ekleme
+- Farklı bir profil açıp oraya gerçek cihazı ekleme ---> OK
 - Görsel düzenlemeler?
